--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/verticalRv"
-        android:scrollbars="horizontal" />
+        android:scrollbars="horizontal"
+        />
 
 </LinearLayout>
 
