--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="250dp">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/black">
         <ImageView
             android:id="@+id/mainIm"
             android:layout_width="match_parent"
@@ -12,6 +13,6 @@
             android:layout_gravity="fill_horizontal"
             android:adjustViewBounds="true"
             android:src="@drawable/im"
-            android:contentDescription="TODO" />
+            android:contentDescription="@string/todo" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
