--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -46,14 +46,16 @@
     </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
+        android:background="@color/teal_700"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
             android:src="@drawable/profile"
             app:civ_border_width="2dp"
             app:civ_border_color="#FF000000"/>
@@ -61,44 +63,22 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@color/white"
-            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:textFontWeight="700"
             android:textSize="15sp"
             android:gravity="center_vertical"
-            android:text="@string/name"
-            tools:ignore="RtlSymmetry" />
+            android:text="Maksym Oboznyi"/>
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"/>
 
-        <ImageButton
-            android:backgroundTint="@color/black"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/download"/>
-        <ImageButton
-            android:backgroundTint="@color/black"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/like"/>
-        <ImageButton
-            android:backgroundTint="@color/black"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="20dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/save"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@color/white"
+            android:text="testing"/>
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@android:color/darker_gray" />
-
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -252,11 +232,10 @@
         </LinearLayout>
     </LinearLayout>
 
-
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@android:color/white" />
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
