--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -342,7 +342,7 @@
         <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="barcelona"
+            android:text="@string/main_city"
             android:textAllCaps="false"
             android:backgroundTint="#3A3B3C"
             android:padding="0dp"
@@ -353,7 +353,7 @@
         <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="spain"
+            android:text="@string/main_country"
             android:textAllCaps="false"
             android:backgroundTint="#3A3B3C"
             android:padding="0dp"
