--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/black"
-    tools:context=".MainActivity">
+    tools:context=".IntroActivity">
 
-<!--    <ImageView-->
-<!--        android:id="@+id/mainIm"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="250dp"-->
-<!--        android:layout_gravity="fill_horizontal"-->
-<!--        android:adjustViewBounds="true"-->
-<!--        android:src="@drawable/im"-->
-<!--        android:contentDescription="TODO" />-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
